# repro

./: .clang-tidy  .gitignore  CMakeLists.txt  azure-pipelines.yml  lib.cpp  lib.h
cmake/: CheckIfReplacements.cmake  ClangFormat.cmake  ClangFormatCheck.cmake
